fix(styles): align the notification indicator icon [ci visual] (#5556)

--- a/packages/styles/src/notification.scss
+++ b/packages/styles/src/notification.scss
@@ -195,6 +195,7 @@ $block: #{$fd-namespace}-notification;
   &__indicator {
     @include fd-reset();
 
+    padding-block-start: 0.1875rem;
     margin-inline-end: 0.5rem;
     color: var(--fdNotification_Indicator_Color);
 
